Fix editor spacing and all battles loading manifest (again)

--- a/theme.css
+++ b/theme.css
@@ -152,7 +152,6 @@ body {
   color: inherit;
   flex: 1;
   text-align: left;
-  padding: 0.75rem 0.75rem 0.75rem 1rem;
 }
 
 .inner-box .code-window h4 {
